--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "instructor",
   "version": "0.0.1",
   "description": "structured outputs for llms",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
+    "build:watch": "tsc --watch",
+    "clean": "rm -rf ./dist/*"
   },
   "repository": {
     "type": "git",
