--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
+    "build": "tsc && npm link instructor",
     "build:watch": "tsc --watch",
     "clean": "rm -rf ./dist/*"
   },
@@ -27,6 +27,10 @@
   "homepage": "https://github.com/jxnl/instructor-js#readme",
   "dependencies": {
     "openai": "^4.24.1",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zod-to-json-schema": "^3.22.3"
+  },
+  "devDependencies": {
+    "typescript": "^5.3.3"
   }
 }
