Revert "Initial implementation & example"

--- a/package.json
+++ b/package.json
@@ -2,12 +2,9 @@
   "name": "instructor",
   "version": "0.0.1",
   "description": "structured outputs for llms",
-  "main": "./dist/index.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc && npm link instructor",
-    "build:watch": "tsc --watch",
-    "clean": "rm -rf ./dist/*"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -27,10 +24,6 @@
   "homepage": "https://github.com/jxnl/instructor-js#readme",
   "dependencies": {
     "openai": "^4.24.1",
-    "zod": "^3.22.4",
-    "zod-to-json-schema": "^3.22.3"
-  },
-  "devDependencies": {
-    "typescript": "^5.3.3"
+    "zod": "^3.22.4"
   }
 }
