--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.1",
     "@ianvs/prettier-plugin-sort-imports": "4.1.0",
+    "@types/bun": "^1.0.0",
     "@types/node": "^20.10.6",
     "@typescript-eslint/eslint-plugin": "6.5.0",
     "@typescript-eslint/parser": "6.5.0",
