--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,6 @@
   "compilerOptions": {
     "target": "es6",
     "module": "commonjs",
-    "rootDir": "./src",
     "outDir": "./dist",
     "esModuleInterop": true,
     "strict": true,
@@ -11,5 +10,6 @@
     "strictPropertyInitialization": false,
     "declaration": true
   },
-  "exclude": [ "examples", "dist" ]
+  "include": ["src/**/*"],
+  "exclude": ["examples", "node_modules", "dist"],
 }
