--- a/package.json
+++ b/package.json
@@ -39,8 +39,7 @@
   "homepage": "https://github.com/jxnl/instructor-js#readme",
   "dependencies": {
     "openai": "^4.24.1",
-    "zod": "^3.22.4",
-    "zod-to-json-schema": "^3.22.3"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.0",
