--- a/package.json
+++ b/package.json
@@ -37,9 +37,9 @@
     "url": "https://github.com/jxnl/instructor-js/issues"
   },
   "homepage": "https://github.com/jxnl/instructor-js#readme",
-  "dependencies": {
-    "openai": "^4.24.1",
-    "zod": "^3.22.4"
+  "peerDependencies": {
+    "openai": ">=4.24.1",
+    "zod": ">=3.22.4"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.0",
