--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "url": "https://github.com/jxnl/instructor-js/issues"
   },
   "homepage": "https://github.com/jxnl/instructor-js#readme",
+  "dependencies": {
+    "zod-to-json-schema": "^3.22.3"
+  },
   "peerDependencies": {
     "openai": ">=4.24.1",
     "zod": ">=3.22.4"
