--- a/package.json
+++ b/package.json
@@ -50,8 +50,8 @@
     "@ianvs/prettier-plugin-sort-imports": "4.1.0",
     "@types/bun": "^1.0.0",
     "@types/node": "^20.10.6",
-    "@typescript-eslint/eslint-plugin": "6.5.0",
-    "@typescript-eslint/parser": "6.5.0",
+    "@typescript-eslint/eslint-plugin": "latest",
+    "@typescript-eslint/parser": "latest",
     "eslint": "^8.40.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-import-resolver-typescript": "^3.5.5",
