--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ jobs:
   test:
     name: run-tests
     runs-on: ubuntu-latest
-
+    environment: OPENAI
     steps:
       - uses: actions/checkout@v3
         with:
