--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   },
   "homepage": "https://github.com/jxnl/instructor-js#readme",
   "dependencies": {
-    "schema-stream": "^1.1.0",
+    "schema-stream": "1.2.0",
     "zod-to-json-schema": "^3.22.3"
   },
   "peerDependencies": {
