--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   "homepage": "https://github.com/jxnl/instructor-js#readme",
   "dependencies": {
     "schema-stream": "1.2.1",
-    "zod-to-json-schema": "^3.22.3"
+    "zod-to-json-schema": "^3.22.3",
     "zod-validation-error": "^2.1.0"
   },
   "peerDependencies": {
