--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "instructor-js",
   "version": "0.0.1",
   "description": "structured outputs for llms",
-  "main": "./dist/instructor.js",
-  "module": "./dist/instructor.mjs",
-  "types": "./dist/instructor.d.ts",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/instructor.mjs",
-      "require": "./dist/instructor.js"
-    }
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
+      }
   },
   "publishConfig": {
     "access": "public"
