--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,5 @@
 {
   "singleQuote": true,
   "trailingComma": "all",
-  "endOfLine": "lf",
-  "@typescript-eslint/no-explicit-any": "off"
+  "endOfLine": "lf"
 }
