--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     ".": {
       "import": "./dist/index.mjs",
       "require": "./dist/index.js"
-      }
+    }
   },
   "publishConfig": {
     "access": "public"
@@ -20,8 +20,8 @@
     "lint": "eslint src/",
     "type-check": "tsc --noEmit",
     "prepare": "husky install",
-    "format:write": "prettier --write \"**/*.{ts,tsx,mdx}\"",
-    "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\"",
+    "format:write": "prettier --write \"**/*.{js,json,jsx,ts,tsx}\"",
+    "format": "prettier \"src/**/*.{js,jsx,ts,tsx}\" --check",
     "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist",
     "changeset": "changeset",
     "version-packages": "changeset version",
