adjusting config slightly and fixing a few errors

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -48,7 +48,7 @@ jobs:
         id: changesets
         uses: changesets/action@v1
         with:
-          publish: bun publish-packages
+          publish: bun publish:latest
           createGithubReleases: true
 
         env:
