--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
   "name": "instructor-js",
-  "version": "0.0.0",
+  "version": "0.0.1--alpha.0",
   "description": "structured outputs for llms",
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
+  "main": "./dist/instructor.js",
+  "module": "./dist/instructor.mjs",
+  "types": "./dist/instructor.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.js"
+      "import": "./dist/instructor.mjs",
+      "require": "./dist/instructor.js"
     }
   },
   "publishConfig": {
     "access": "public"
   },
+  "files": [
+    "dist/**"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsup",
@@ -26,7 +29,7 @@
     "changeset": "changeset",
     
     "version-packages": "changeset version",
-    "publish-packages": "tsup && changeset publish"
+    "publish:latest": "tsup && changeset publish"
   },
   "repository": {
     "type": "git",
