--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -127,10 +127,11 @@ nav:
     - Help with Instructor: 'help.md'
     - Installation: 'installation.md'
     - Contributing: 'contributing.md'
-  - Tips: concepts/prompting.md'
   - Concepts: 
+    - Overview: 'concepts/tips.md'
     - Modes: 'concepts/modes.md'
     - Schema: 'concepts/schema.md'
+    - Streaming: 'concepts/streaming.md'
   - Cookbook:
     - Overview: 'examples/index.md'
     - Classification: 'examples/classification.md'
