--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -136,6 +136,7 @@ nav:
     - Overview: 'examples/index.md'
     - Classification: 'examples/classification.md'
     - Query Decomposition: 'examples/query_decomposition.md'
+    - Action Item and Dependency Mapping: 'examples/action_items.md'
   - Blog:
     - "blog/index.md"
   
