--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "instructor-js",
+  "name": "@instructor-ai/instructor",
   "version": "0.0.1--alpha.0",
   "description": "structured outputs for llms",
   "publishConfig": {
