--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://unpkg.com/@changesets/config@2.3.0/schema.json",
-  "changelog": ["@changesets/changelog-github", { "repo": "jxnl/instructor-js" }],
+  "changelog": ["@changesets/changelog-github", { "repo": "instructor-ai/instructor-js" }],
   "commit": false,
   "fixed": [],
   "linked": [],
