--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@instructor-ai/instructor",
-  "version": "0.0.1--alpha.0",
+  "version": "0.0.1",
   "description": "structured outputs for llms",
   "publishConfig": {
     "access": "public"
