--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -4,11 +4,11 @@
   "commit": false,
   "fixed": [],
   "linked": [],
-  "access": "restricted",
+  "access": "public",
   "baseBranch": "main",
   "ignore": [],
   "privatePackages": {
-    "version": true,
+    "version": false,
     "tag": false
   }
 }
