--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,11 +1,9 @@
 name: Test
 on:
   push:
-    branches: 
-      - main
-  pull_request_target:
-    branches:
-      - main
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 jobs:
 
   test:
