--- a/.github/workflows/release-pr.yml
+++ b/.github/workflows/release-pr.yml
@@ -19,6 +19,9 @@ jobs:
 
     name: Changeset Release
     runs-on: ubuntu-latest
+    environment: Publish
+    env:
+      NPM_TOKEN: ${{ secrets.NPM_TOKEN }}    
 
     steps:
       - name: Checkout code
