--- a/.github/workflows/release-pr.yml
+++ b/.github/workflows/release-pr.yml
@@ -1,4 +1,4 @@
-name: Create changeset release PR
+name: RC PR
 
 on:
   push:
@@ -12,13 +12,16 @@ env:
 
 jobs:
   release:
-    if: github.repository == 'jxnl/instructor-js'
+    if: github.repository == 'instructor-ai/instructor-js'
     permissions:
       contents: write
       pull-requests: write
 
     name: Changeset Release
     runs-on: ubuntu-latest
+    environment: Publish
+    env:
+      NPM_TOKEN: ${{ secrets.NPM_TOKEN }}    
 
     steps:
       - name: Checkout code
