--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
-  "name": "instructor-js",
-  "version": "0.0.1",
+  "name": "@instructor-ai/instructor",
+  "version": "0.0.0",
   "description": "structured outputs for llms",
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
-  "exports": {
-    ".": {
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.js"
-    }
-  },
   "publishConfig": {
     "access": "public"
   },
+  "main": "./dist/instructor.js",
+  "module": "./dist/instructor.mjs",
+  "types": "./dist/instructor.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/instructor.mjs",
+      "require": "./dist/instructor.js"
+    },
+    "./*": "./dist/*.mjs"
+  },
+  "files": [
+    "dist/**"
+  ],
+  "sideEffects": false,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsup",
@@ -28,7 +33,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jxnl/instructor-js.git"
+    "url": "git+https://github.com/instructor-ai/instructor-js.git"
   },
   "keywords": [
     "llm",
@@ -39,9 +44,9 @@
   "author": "Jason Liu",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/jxnl/instructor-js/issues"
+    "url": "https://github.com/instructor-ai/instructor-js/issues"
   },
-  "homepage": "https://github.com/jxnl/instructor-js#readme",
+  "homepage": "https://github.com/instructor-ai/instructor-js#readme",
   "dependencies": {
     "schema-stream": "1.6.0",
     "zod-to-json-schema": "^3.22.3",
