--- a/.github/workflows/release-pr.yml
+++ b/.github/workflows/release-pr.yml
@@ -21,7 +21,8 @@ jobs:
     runs-on: ubuntu-latest
     environment: Publish
     env:
-      NPM_TOKEN: ${{ secrets.NPM_TOKEN }}    
+      NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
     steps:
       - name: Checkout code
@@ -52,5 +53,5 @@ jobs:
         with:
           version: bun run version-packages
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
