--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -127,8 +127,10 @@ nav:
     - Help with Instructor: 'help.md'
     - Installation: 'installation.md'
     - Contributing: 'contributing.md'
+  - Tips:
+    - Tips: 'tips/prompting.md'
   - Concepts: 
-    - Overview: 'concepts/tips.md'
+    - Philosophy: 'concepts/philosophy.md'
     - Modes: 'concepts/modes.md'
     - Schema: 'concepts/schema.md'
     - Streaming: 'concepts/streaming.md'
