--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,6 @@ on:
     branches:
       - main
 jobs:
-
   test:
     name: run-tests
     runs-on: ubuntu-latest
@@ -33,7 +32,9 @@ jobs:
 
       - name: Install Dependencies
         run: bun i
-
+      - name: Build
+        run: bun run build
+        
       - run: bun run type-check
       - run: bun run lint
       - run: bun test --timeout=15000
