--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,11 @@
 name: Test
 on:
   push:
-    branches: [master]
-  pull_request:
-    branches: [master]
-  
+    branches: 
+      - main
+  pull_request_target:
+    branches:
+      - main
 jobs:
   test:
     name: run-tests
@@ -15,7 +16,7 @@ jobs:
       ANYSCALE_API_KEY: ${{ secrets.ANYSCALE_API_KEY }}
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
@@ -31,7 +32,7 @@ jobs:
 
       - name: Install Dependencies
         run: bun i
-        
+
       - run: bun run type-check
       - run: bun run lint
       - run: bun test --timeout=15000
