--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "5.0.0",
     "husky": "^8.0.3",
-    "prettier": "^3.2.4",
+    "prettier": "3.2.0",
     "tsup": "^8.0.1",
     "ts-inference-check": "^0.3.0",
     "typescript": "^5.2.2"
