--- a/package.json
+++ b/package.json
@@ -64,15 +64,15 @@
     "@ianvs/prettier-plugin-sort-imports": "4.1.0",
     "@types/bun": "^1.0.0",
     "@types/node": "^20.10.6",
-    "@typescript-eslint/eslint-plugin": "6.5.0",
-    "@typescript-eslint/parser": "6.5.0",
-    "eslint": "^8.40.0",
-    "eslint-config-prettier": "9.0.0",
+    "@typescript-eslint/eslint-plugin": "latest",
+    "@typescript-eslint/parser": "latest",
+    "eslint": "latest",
+    "eslint-config-prettier": "latest",
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-prettier": "5.0.0",
+    "eslint-plugin-prettier": "latest",
     "husky": "^8.0.3",
-    "prettier": "3.2.0",
+    "prettier": "latest",
     "tsup": "^8.0.1",
     "ts-inference-check": "^0.3.0",
     "typescript": "^5.2.2"
