--- a/package.json
+++ b/package.json
@@ -5,20 +5,21 @@
   "publishConfig": {
     "access": "public"
   },
-  "main": "./dist/instructor.js",
-  "module": "./dist/instructor.mjs",
-  "types": "./dist/instructor.d.ts",
+  "type": "module",
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
   "exports": {
     ".": {
-      "import": "./dist/instructor.mjs",
-      "require": "./dist/instructor.js"
-    },
-    "./*": "./dist/*.mjs"
+      "require": "./dist/index.cjs",
+      "import": "./dist/index.js",
+      "default": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
   },
   "files": [
     "dist/**"
   ],
-  "sideEffects": false,
+  "typings": "./dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsup",
@@ -50,7 +51,7 @@
   },
   "homepage": "https://github.com/instructor-ai/instructor-js#readme",
   "dependencies": {
-    "zod-stream": "^0.0.4",
+    "zod-stream": "^0.0.5",
     "zod-to-json-schema": "^3.22.3",
     "zod-validation-error": "^2.1.0"
   },
@@ -64,13 +65,15 @@
     "@ianvs/prettier-plugin-sort-imports": "4.1.0",
     "@types/bun": "^1.0.0",
     "@types/node": "^20.10.6",
-    "@typescript-eslint/eslint-plugin": "latest",
-    "@typescript-eslint/parser": "latest",
-    "eslint": "latest",
-    "eslint-config-prettier": "latest",
+    "eslint-config-turbo": "^1.10.12",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-config": "^0.3.0",
+    "eslint-plugin-prettier": "^5.1.2",
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-prettier": "latest",
+    "eslint-plugin-only-warn": "^1.1.0",
+    "@typescript-eslint/parser": "^6.11.0",
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
     "husky": "^8.0.3",
     "prettier": "latest",
     "tsup": "^8.0.1",
