few small updates here - but primary is an explicit cast of params to include stream: true after the explicit check

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "files": [
     "dist/**"
   ],
-  "typings": "./dist/index.d.ts",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsup",
