--- a/docs/blog/.authors.yml
+++ b/docs/blog/.authors.yml
@@ -2,4 +2,4 @@ authors:
   jxnl:
     name: Jason Liu
     description: Creator
-    avatar: https://pbs.twimg.com/profile_images/1724672723748638720/qOBwmkOI_400x400.jpg
+    avatar: https://avatars.githubusercontent.com/u/4852235 
