--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -140,6 +140,7 @@ nav:
     - Query Decomposition: 'examples/query_decomposition.md'
     - Action Item and Dependency Mapping: 'examples/action_items.md'
     - Self Correction: 'examples/self_correction.md'
+    - Content Moderation: 'examples/content_moderation.md'
   - Blog:
     - "blog/index.md"
   
