--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,12 +5,9 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
 jobs:
   test-main:
-    if: github.repository == 'instructor-ai/instructor-js' && github.ref == 'refs/heads/main'
+    if: github.repository == 'instructor-ai/instructor-js' && github.ref == 'refs/heads/main' && github.event_name == 'push'
     name: run-tests
     runs-on: ubuntu-latest
     environment: TEST-MAIN
