--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,7 +39,7 @@ jobs:
       - run: bun test --timeout=25000
 
   approve:
-    if: github.event_name == 'pull_request_target'
+    if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
 
     steps:
@@ -47,7 +47,7 @@ jobs:
       run: echo For security reasons, all pull requests need to be approved first before running any automated CI.
     
   test-branch:
-    if: github.event_name == 'pull_request_target'
+    if: github.event_name == 'pull_request'
     name: run-tests
     runs-on: ubuntu-latest
     needs: [approve]
