--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ on:
       - main
 jobs:
   test-main:
-    if: github.repository == 'instructor-ai/instructor-js' && github.ref == 'refs/heads/main' && github.event_name == 'push'
+    if: github.repository == 'instructor-ai/instructor-js' && github.ref == 'refs/heads/main'
     name: run-tests
     runs-on: ubuntu-latest
     environment: TEST-MAIN
@@ -39,7 +39,7 @@ jobs:
       - run: bun test --timeout=25000
 
   approve:
-    if: github.event_name == 'pull_request'
+    if: github.ref != 'refs/heads/main'
     runs-on: ubuntu-latest
 
     steps:
@@ -47,7 +47,7 @@ jobs:
       run: echo For security reasons, all pull requests need to be approved first before running any automated CI.
     
   test-branch:
-    if: github.event_name == 'pull_request'
+    if: github.ref != 'refs/heads/main'
     name: run-tests
     runs-on: ubuntu-latest
     needs: [approve]
