--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,8 @@
 name: Test
 on:
   pull_request_target:
-    branches: [ master ]  
+    branches:
+      - main
   push:
     branches:
       - main
