--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -124,16 +124,14 @@ nav:
   - Introduction: 
     - Welcome To Instructor: 'index.md'
     - Why use Instructor?: 'why.md'
+    - Schema: 'concepts/schema.md'
+    - Patching: 'concepts/patching.md'
+    - Streaming: 'concepts/streaming.md'
+    - Prompting Tips: 'tips/prompting.md'
+    - Philosophy: 'concepts/philosophy.md'
     - Help with Instructor: 'help.md'
     - Installation: 'installation.md'
     - Contributing: 'contributing.md'
-  - Tips:
-    - Tips: 'tips/prompting.md'
-  - Concepts: 
-    - Philosophy: 'concepts/philosophy.md'
-    - Modes: 'concepts/modes.md'
-    - Schema: 'concepts/schema.md'
-    - Streaming: 'concepts/streaming.md'
   - Cookbook:
     - Overview: 'examples/index.md'
     - Classification: 'examples/classification.md'
