Added logging page to mkdocs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -127,6 +127,7 @@ nav:
     - Schema: 'concepts/schema.md'
     - Patching: 'concepts/patching.md'
     - Streaming: 'concepts/streaming.md'
+    - Logging: 'concepts/logging.md'
     - Prompting Tips: 'tips/prompting.md'
     - Philosophy: 'concepts/philosophy.md'
     - Help with Instructor: 'help.md'
