--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,9 +1,9 @@
 site_name: Instructor (JS)
 site_author: Jason Liu
-site_description: Enhancing OpenAI function calling with Zod 
+site_description: Structured LLM outputs with Zod
 repo_name: instructor
 repo_url: https://github.com/instructor-ai/instructor-js
-site_url: https://instructor-ai.github.io/instructor-js/
+site_url: https://js.useinstructor.com/
 edit_uri: edit/main/docs/
 copyright: Copyright &copy; 2024 Jason Liu
 theme:
