--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "zod": ">=3.22.4"
   },
   "devDependencies": {
+    "@anthropic-ai/sdk": "latest",
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.1",
     "@ianvs/prettier-plugin-sort-imports": "4.1.0",
@@ -74,7 +75,7 @@
     "eslint-plugin-only-warn": "^1.1.0",
     "eslint-plugin-prettier": "^5.1.2",
     "husky": "^8.0.3",
-    "llm-polyglot": "^0.0.3",
+    "llm-polyglot": "1.0.0--beta.2",
     "prettier": "latest",
     "ts-inference-check": "^0.3.0",
     "tsup": "^8.0.1",
