updating to tee the primary stream if stream usage is enabled - so we can extract usage and include in _meta

--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
   },
   "homepage": "https://github.com/instructor-ai/instructor-js#readme",
   "dependencies": {
-    "zod-stream": "1.0.2",
+    "zod-stream": "1.0.3",
     "zod-validation-error": "^2.1.0"
   },
   "peerDependencies": {
@@ -76,6 +76,7 @@
     "eslint-plugin-prettier": "^5.1.2",
     "husky": "^8.0.3",
     "llm-polyglot": "1.0.0",
+    "openai": "latest",
     "prettier": "latest",
     "ts-inference-check": "^0.3.0",
     "tsup": "^8.0.1",
