expose google key

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,8 @@ jobs:
       ANYSCALE_API_KEY: ${{ secrets.ANYSCALE_API_KEY }}
       ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
       TOGETHER_API_KEY: ${{ secrets.TOGETHER_API_KEY }}
-
+      GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+      
     steps:
       - uses: actions/checkout@v3
         with:
